[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Miner/Miner_Sprite_Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Miner/Pickaxe.png" type="Texture" id=2]
[ext_resource path="res://Assets/Miner/Cursor.png" type="Texture" id=3]
[ext_resource path="res://Camera.gd" type="Script" id=4]
[ext_resource path="res://Actors/Player/Cursor.gd" type="Script" id=5]
[ext_resource path="res://Actors/Player/Player.gd" type="Script" id=6]
[ext_resource path="res://Actors/SoftCollision.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "IdleDown"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -7.5, 6 ), Vector2( -7.5, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -18, -22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "IdleLeft"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -7, 5.5 ), Vector2( -7, 6.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -25.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -18, -22 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleRight"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -6.8, 5.5 ), Vector2( -6.8, 6.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6, -22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleUp"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 7.5, 6 ), Vector2( 7.5, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6, -22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "MeleeDown"
length = 0.21
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ItemSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -120.0, -180.0, -220.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7.5, 6 ), Vector2( -3.5, 6 ), Vector2( 0, 6 ), Vector2( 3.5, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -18, -22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodySprite:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MeleeLeft"
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ItemSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -7, 5.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -25.0, -60.0, -120.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -18, -22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodySprite:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "MeleeRight"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ItemSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6.8, 5.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 25.0, 60.0, 120.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6, -22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodySprite:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "MeleeUp"
length = 0.21
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ItemSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7.5, 6 ), Vector2( 3.5, 2 ), Vector2( 0, 2 ), Vector2( -3.5, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 60.0, 30.0, 0.0, -30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6, -22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodySprite:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ), Vector2( 4, 4 ), Vector2( 5, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -7.5, 6 ), Vector2( -4, 3.5 ), Vector2( -7.5, 6 ), Vector2( -7.5, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 25.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -18, -22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ), Vector2( 4, 7 ), Vector2( 5, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -25.0, -45.0, -25.0, 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -7, 5.5 ), Vector2( -7, 3.5 ), Vector2( -7, 5.5 ), Vector2( -4.5, 3.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -18, -22 ), Vector2( -6, -22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ), Vector2( 4, 6 ), Vector2( 5, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -6.8, 5.5 ), Vector2( -3.2, 3 ), Vector2( -6.8, 5.5 ), Vector2( -6.8, 3.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 25.0, 45.0, 25.0, 45.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6, -22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ), Vector2( 4, 5 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 7.5, 6 ), Vector2( 4, 3.5 ), Vector2( 7.5, 6 ), Vector2( 7.5, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -25.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6, -22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ItemSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=13]
radius = 4.0
height = 3.0

[sub_resource type="CapsuleShape2D" id=14]
radius = 5.5
height = 8.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 9.0
height = 18.094

[sub_resource type="CircleShape2D" id=16]
radius = 6.0

[sub_resource type="Animation" id=17]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CapsuleShape2D" id=18]
radius = 4.0
height = 3.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 6 )

[node name="BodySprite" type="Sprite" parent="."]
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
hframes = 6
vframes = 8

[node name="ItemSprite" type="Sprite" parent="."]
position = Vector2( -7.5, 6 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -18, -22 )
flip_h = true

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 1 )
anims/IdleLeft = SubResource( 2 )
anims/IdleRight = SubResource( 3 )
anims/IdleUp = SubResource( 4 )
anims/MeleeDown = SubResource( 5 )
anims/MeleeLeft = SubResource( 6 )
anims/MeleeRight = SubResource( 7 )
anims/MeleeUp = SubResource( 8 )
anims/WalkDown = SubResource( 9 )
anims/WalkLeft = SubResource( 10 )
anims/WalkRight = SubResource( 11 )
anims/WalkUp = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.5 )
rotation = 1.5708
shape = SubResource( 13 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 14 )

[node name="MeleeHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape2D" parent="MeleeHurtBox"]
position = Vector2( 25, 0 )
shape = SubResource( 15 )

[node name="MineHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="MineHurtBox"]
position = Vector2( 15, 0 )
shape = SubResource( 16 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0
script = ExtResource( 4 )

[node name="Cursor" type="Sprite" parent="Camera"]
position = Vector2( 0, -15 )
scale = Vector2( 0.5, 0.5 )
z_index = 5
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="CursorAnimation" type="AnimationPlayer" parent="Camera/Cursor"]
anims/Idle = SubResource( 17 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 5.5 )
rotation = 1.5708
shape = SubResource( 18 )

[editable path="SoftCollision"]
